<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beat Your Pace</string>
    <string name="action_settings">Settings</string>
    <string name="sTrainingMode">Training Mode</string>
    <string name="sLetsRun">Let\'s Run!</string>
    <string name="sSettings">Settings</string>
    <string name="sDistanceUnits">Miles or kilometres</string>
    <string name="sDistanceMiles">Miles</string>
    <string name="sDistanceKilo">Kilometres</string>
    <string name="sSetDefaultDistanceUnits">Select miles or kilometres</string>
    <string name="sDefaultTargetTitle">Select default target pace</string>
    <string name="sDefaultTargetPace">8 mph</string>
    <string name="sSetTargetPace">Select target pace</string>
    <string name="sMinus">-</string>
    <string name="sPlus">+</string>
    <string name="sFindMusicTitle">Find Music</string>
    <string name="sFindMusicButton">Set Music Location</string>
    <string name="sTooSlowButton">Music is Too Slow!</string>
    <string name="sTooFastButton">Music is Too Fast!</string>
    <string name="sSongDetails">Music Artist &amp; Track</string>
    <string name="sPaceTitle">Current Pace</string>
    <string name="sTargetTitle">Target Pace</string>
    <string name="sPace">0.0</string>
    <string name="sTarget">0.0</string>
    <string name="sDscrPreviousTrack">Plays the Previous Track Played</string>
    <string name="sDscrPlayPause">Play or Pause the Current Track</string>
    <string name="sDscrSkipTrack">Skip To the Next Track Without Storing a Preference</string>
    <string name="sDscrStop">Stop Button</string>
    <string name="sDscrCurrentMode">Show\'s which mode you are using (Training or Let\'s Run)</string>
    <string name="tAdjustTargetPace">Adjust Target Pace</string>
    <string name="sDscrBPM_Icon">Icon for the BPM App</string>
    <string name="sTargetUnit">min/KM</string>
    <string name="sCurrentPaceUnit">min/KM</string>
    <string name="sWelcome">Welcome!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_TrainingModeActivity">Training mode</string>
    <string name="title_activity_lets_run_mode">Lets Run mode</string>
    <string name="title_activity_help_main">Help</string>
    <string name="title_activity_help_page">Help</string>
    <string name="title_activity_main">Beat Your Pace</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about_page">About</string>
    <string name="helpPageTitle">Help</string>
    <string name="shelpPage">Help</string>
    <string name="title_helpPage">Help</string>
    <string name="helpPageTrainingTitle">Training mode</string>
    <string name="helpPageLetsRunTitle">Let\'s Run\! </string>
    <string name="helpPageSettingsTitle">Settings</string>
    <string name="helpTrainingText">The Training mode allows you "train" your music to the pace you want to run at. \nWhere possible the app will automatically work out the beats per minute for your music and assign an initial pace to this. If you think a track is too fast for the pace it is being played for, press the \'Too fast\' button, if it is too slow press the \'Too slow\' button. \nIn this mode the screen will keep the phone unlocked.</string>
    <string name="helpLetsRunText">This mode allows you to run with songs which already have been associated with your preferred pace. If you didn\'t change any values by pressing \'Too fast\' or \'Too slow\' in the training mode then you will run with the pre-defined values. \nIn this mode the screen will keep the phone unlocked.</string>
    <string name="helpSettingsText">Use Settings to set the pace you want to run at. \nMiles(M)/Kilometres(Km) sets whether the app will show and calculate pace in minutes per M or minutes per Km. \nIf you change the M/Km setting then you also need to change the target pace which is the number of minutes it takes you to run one M/Km. If you don\'t know your pace, try the adult default of 10 M or 6 Km, or run one M/Km and time yourself.</string>
    <string name="aboutPageTitle">About</string>
    <string name="aboutAcknowledgeTitle">Acknowledgements</string>
    <string name="aboutLimitsTitle">Supported versions</string>
    <string name="aboutAboutTitle">About the BeatYourPace app</string>
    <string name="aboutAckText">Tempo analysis (or the beats per minute) of your music is provided using the API licensed by Echonest at http://www.www.echonest.com. \nCopyright of the BeatYourPace app is owned by D. Twisleton.</string>
    <string name="aboutLimitsText">BeatYourPace has been tested for Android 2.3.3 to 4.1.1. \nIt is desiged for runners using phones held in the hand or attached to an armband, it does not support tablet screen resolutions. \nThe screen is locked in portrait and is designed to work for resolutions from 2.7" (240 x 320) to 5.4" (480 x 854).</string>
    <string name="aboutAboutText">BeatYourPace is an app for runners that plays music from your phone matched to the pace you want to run at. It\'s aim is to use music at the right tempo to help motivate you to achieve and sustain your desired running pace. \nAs every runner is different, the app lets you override the pace set for each music track for the pace you think a track is suitable for. \nIn the app this is \'training\' the music to your running pace, so use the Training mode for this.\nRunners told us they don\'t like to stop to press buttons so the buttons are as large as possible to help you press them without looking at the screen in case you need to change your target pace, or change the tagged pace for a track while you are running.</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="SplashIcon">SplashIcon</string>
    <string name="copyright">&quot;@D. Twiselton - 2014&quot;</string>
    
    

</resources>
