<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
      android:padding="6dip"
     >

    <TextView
        android:id="@+id/helpPageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8A8A8"
        android:orientation="vertical"
        android:text="@string/helpPageTitle"
        android:padding="1dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TrainingTitle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:text="@string/helpPageTrainingTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" 
        android:padding="2dip"/>

    <TextView
        android:id="@+id/TrainingText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:text="@string/helpTrainingText" />

    <TextView
        android:id="@+id/LetsRunTitle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:text="@string/helpPageLetsRunTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:padding="2dip" />

    <TextView
        android:id="@+id/LetsRunText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:text="@string/helpLetsRunText" />
    
      <TextView
        android:id="@+id/SettingsTitle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:text="@string/helpPageSettingsTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SettingsText"
		android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"        
        android:text="@string/helpSettingsText" />
    

</LinearLayout>

    </ScrollView>