<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0298db"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

        <Button
            android:id="@+id/bTrainingMode"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:text="@string/sTrainingMode"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bSettings"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bLetsRun"
            android:layout_below="@+id/bLetsRun"
            android:layout_marginTop="61dp"
            android:text="@string/sSettings"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bHelpPage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bSettings"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="38dp"
            android:text="@string/shelpPage"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bLetsRun"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/bTrainingMode"
            android:layout_below="@+id/bTrainingMode"
            android:layout_marginTop="53dp"
            android:text="@string/sLetsRun"
            android:textColor="#ffffff"
            android:textSize="20sp" />

</RelativeLayout>