<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_margin="3dp"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@drawable/background_gradient_bluetowhite">
              
        <View
            android:id="@+id/Spacer001"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="0.2" />
        
        <TextView
            android:id="@+id/tMainMenuTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/title_activity_main"
            android:textSize="30sp"
            android:textColor="@color/blue4"
            android:textStyle="bold" />
        
                        <View
            android:id="@+id/Spacer003"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_weight="0.2" />
    </LinearLayout>
    
       <View
           android:id="@+id/SpacerB"
           android:layout_width="match_parent"
           android:layout_height="25dp"
            />
    
    
    <!-- Pace buttons -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
           <Button
               android:id="@+id/bTrainingMode"
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="1.5"
               android:background="@drawable/button_color_gradualpurple"
               android:text="@string/sTrainingMode"
           	   android:textColor="@color/white"
          	 	android:textSize="25sp" />
           
           <View
           android:id="@+id/SpacerC"
           android:layout_width="match_parent"
           android:layout_height="25dp" />
           
                      <Button
               android:id="@+id/bLetsRun"
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="1.5"
               android:background="@drawable/button_color_gradualpurple"
               android:textSize="25sp"
               android:textColor="@color/white"
               android:text="@string/sLetsRun" />
           
           <View
           android:id="@+id/SpacerD"
           android:layout_width="match_parent"
           android:layout_height="25dp" />
           
           <Button
           android:id="@+id/bSettings"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1.5"
           android:background="@drawable/button_color_gradualpurple"
           android:textSize="25sp"
           android:textColor="@color/white"
           android:text="@string/sSettings" />
           
           <View
           android:id="@+id/SpacerE"
           android:layout_width="match_parent"
           android:layout_height="25dp" />
           
           <Button
           android:id="@+id/bHelpPage"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:layout_weight="1.5"
           android:background="@drawable/button_color_gradualpurple"
           android:textSize="25sp"
           android:textColor="@color/white"
           android:text="@string/shelpPage" />
           
           <View
           android:id="@+id/SpacerF"
           android:layout_width="match_parent"
           android:layout_height="5dp" />

           
           
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_gradient_whitetoblue">
        
    </LinearLayout>
  
    

       
       
</LinearLayout>